fixing spacing

--- a/playerVersion/css/main.css
+++ b/playerVersion/css/main.css
@@ -56,7 +56,7 @@ ul {
   position: relative;
   border: 1px solid black;
   width: 600px;
-  height: 550px;
+  height: 600px;
   padding-left: 20px;
   display: grid;
   grid-template-columns: 180px 160px 160px;
